--- a/backend/.choreo/endpoints.yaml
+++ b/backend/.choreo/endpoints.yaml
@@ -3,6 +3,6 @@ version: 0.1
 endpoints:
   - name: "REST API"
     port: 8000
-    type: "rest"
+    type: "REST"
     networkVisibility: Public
     context: /
